k8s/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: puchi-ingress
  namespace: puchi
spec:
  ingressClassName: traefik
  rules:
    - host: 'puchi.io.vn'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 50051
